--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,13 +19,11 @@ mat-sidenav {
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
+  padding: 25px;
 
   display: flex;
-  justify-content: center;
-  align-items: center;
 
   font-size: 2rem;
-  color: lightgray;
 }
 
 mat-sidenav-container {
