--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,13 @@
 
 <mat-sidenav-container>
   <mat-sidenav mode="side" opened class="mat-elevation-z8">
-    <button mat-button class="menu-button">
+    <button mat-button class="menu-button" routerLink="/">
       <mat-icon>home</mat-icon>
       <span>Home</span>
     </button>
-    <button mat-button class="menu-button">
+    <button mat-button class="menu-button" routerLink="/teams">
       <mat-icon>person</mat-icon>
-      <span>Profile</span>
+      <span>Times</span>
     </button>
     <button mat-button class="menu-button">
       <mat-icon>info</mat-icon>
@@ -26,8 +26,8 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <div class="content mat-elevation-z8">
-      
-      <app-teams></app-teams>
+
+      <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
